Added task to generate server stubs